feat: :sparkles: Avance

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <h1 class="titulo">Visual Charms</h1>
 
     <section class="input">
+        <label for="inputLink">Link imagen</label>
         <input class="inputLink" type="text">
+
+        <label for="inputTitulo">Titulo</label>
         <input class="inputTitulo" type="text">
-        <button class="boton">Añadir imagen</button>
+        <button class="boton agregarImagen">Añadir imagen</button>
         <div class="imagenesMiniatura"></div>
     </section>
 
